[gd_scene load_steps=20 format=3 uid="uid://tgnhd8j0rv4h"]

[ext_resource type="Script" path="res://Assets/Scripts/Afterimage_Test_1.gd" id="1_ahe7i"]
[ext_resource type="Texture2D" uid="uid://dal1vwb47vnlu" path="res://Assets/Sprites/Elena_Stage_Sheet.png" id="1_fbphr"]
[ext_resource type="Texture2D" uid="uid://cuwt4i7ylejrk" path="res://Assets/Sprites/Ken_Sheet.png" id="2_t3hh5"]
[ext_resource type="Shader" path="res://Assets/Shaders/AfterImage/Palette_Swap_KEN.gdshader" id="3_dummj"]
[ext_resource type="AudioStream" uid="uid://bqk7ycmdumyrg" path="res://Assets/BGM/Street Fighter 3 OST - Beats In My Head.mp3" id="3_rdnm3"]
[ext_resource type="Shader" path="res://Assets/Shaders/AfterImage/PARTICLE_SHADER_TEST2.gdshader" id="4_jrs0j"]
[ext_resource type="Script" path="res://Assets/Scripts/Afterimage_Palette.gd" id="4_whyq5"]
[ext_resource type="Script" path="res://Assets/Scripts/Afterimage.gd" id="5_aw0rv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3uohy"]
shader = ExtResource("3_dummj")
shader_parameter/numberOfColors = 12
shader_parameter/C1 = Color(1, 0.133333, 0.843137, 1)
shader_parameter/C2 = Color(1, 0, 0, 1)
shader_parameter/C3 = Color(0, 0, 1, 1)
shader_parameter/C4 = Color(0, 1, 0, 1)
shader_parameter/C5 = Color(0.270588, 0.556863, 0.427451, 1)
shader_parameter/C6 = Color(0.796078, 0.403922, 0.933333, 1)
shader_parameter/C7 = Color(0.654902, 0.447059, 0.0745098, 1)
shader_parameter/C8 = Color(0.439216, 0.509804, 0.12549, 1)
shader_parameter/C9 = Color(0, 0.917647, 0.964706, 1)
shader_parameter/C10 = Color(0.572549, 0.556863, 1, 1)
shader_parameter/C11 = Color(0.988235, 0.52549, 0.419608, 1)
shader_parameter/C12 = Color(0.411765, 0.235294, 0.0901961, 1)

[sub_resource type="Animation" id="Animation_wb0fa"]
resource_name = "Stance"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Afterimage:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_udees"]
resource_name = "Super1"
length = 2.2
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.45, 0.55, 0.625, 0.675, 0.725, 0.8, 0.875, 0.925, 0.975, 1.025, 1.075, 1.125, 1.325, 1.45, 1.6, 1.8, 1.925, 2.025, 2.15, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.45, 0.525, 0.6, 0.675, 0.7, 0.775, 0.85, 0.925, 1.125, 1.15, 1.55, 1.625, 1.7, 1.975, 2.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(42, 129), Vector2(0, 129), Vector2(68.545, 124.835), Vector2(86.86, 101.57), Vector2(91, 128), Vector2(91, 128), Vector2(115, 124.835), Vector2(127, 101.57), Vector2(135, 128), Vector2(135, 128), Vector2(150, 119), Vector2(162.632, -40), Vector2(165, -50), Vector2(166.134, -40), Vector2(169.556, 58), Vector2(172, 128)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ElenaStage:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15, 0.175, 0.2, 0.225, 0.25, 0.275, 0.3, 0.325, 0.35, 0.375, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.160784, 0.133333, 1, 1), Color(1, 1, 1, 1), Color(0.67451, 0, 0.282353, 1), Color(1, 1, 1, 1), Color(0.160784, 0.133333, 1, 1), Color(1, 1, 1, 1), Color(0.67451, 0, 0.282353, 1), Color(1, 1, 1, 1), Color(0.160784, 0.133333, 1, 1), Color(1, 1, 1, 1), Color(0.67451, 0, 0.282353, 1), Color(1, 1, 1, 1), Color(0.160784, 0.133333, 1, 1), Color(1, 1, 1, 1), Color(0.67451, 0, 0.282353, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ElenaStage:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.025, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0.596078, 0.882353, 1), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Afterimage:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 1.95),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7edum"]
_data = {
"Stance": SubResource("Animation_wb0fa"),
"Super1": SubResource("Animation_udees")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qorm4"]
shader = ExtResource("4_jrs0j")
shader_parameter/fadeCont = false
shader_parameter/fadeStep = 3.0
shader_parameter/scale = 1.1
shader_parameter/red = 0.1
shader_parameter/green = 0.1
shader_parameter/blue = 0.1
shader_parameter/tex_anim_offset = 0.0

[sub_resource type="ViewportTexture" id="ViewportTexture_cyshs"]
viewport_path = NodePath("SubViewport")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_v3ih2"]
particles_animation = true
particles_anim_h_frames = 23
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_8tvp5"]
particles_animation = true
particles_anim_h_frames = 23
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gg1lw"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[sub_resource type="Animation" id="Animation_l212d"]
resource_name = "BG"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ydtxy"]
_data = {
"BG": SubResource("Animation_l212d")
}

[node name="Afterimage_Test_1" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ahe7i")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true

[node name="paletteKEN" type="Sprite2D" parent="SubViewport"]
texture_filter = 1
material = SubResource("ShaderMaterial_3uohy")
position = Vector2(100, 200)
texture = ExtResource("2_t3hh5")
hframes = 23
frame = 6

[node name="PaletteKEN_ANIM" type="AnimationPlayer" parent="SubViewport/paletteKEN"]
libraries = {
"": SubResource("AnimationLibrary_7edum")
}

[node name="Ken" type="Sprite2D" parent="."]
z_index = 10
texture_filter = 1
position = Vector2(42, 129)
texture = ExtResource("2_t3hh5")
hframes = 23
frame = 6

[node name="AfterimagePalette" type="GPUParticles2D" parent="Ken"]
show_behind_parent = true
amount = 10
process_material = SubResource("ShaderMaterial_qorm4")
texture = SubResource("ViewportTexture_cyshs")
preprocess = 0.5
speed_scale = 1.5
script = ExtResource("4_whyq5")
metadata/_edit_lock_ = true

[node name="Afterimage" type="GPUParticles2D" parent="Ken"]
visible = false
show_behind_parent = true
material = SubResource("CanvasItemMaterial_v3ih2")
amount = 10
process_material = SubResource("ShaderMaterial_qorm4")
preprocess = 0.5
speed_scale = 1.5
script = ExtResource("5_aw0rv")
metadata/_edit_lock_ = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="Ken/Afterimage"]
visible = false
material = SubResource("CanvasItemMaterial_8tvp5")
position = Vector2(295.303, -2.223)
process_material = SubResource("ParticleProcessMaterial_gg1lw")
texture = ExtResource("2_t3hh5")

[node name="KEN_ANIM" type="AnimationPlayer" parent="Ken"]
libraries = {
"": SubResource("AnimationLibrary_7edum")
}

[node name="ElenaStage" type="Sprite2D" parent="."]
visible = false
z_index = -1
texture_filter = 1
position = Vector2(199, -27)
texture = ExtResource("1_fbphr")
hframes = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="ElenaStage"]
speed_scale = 0.35
libraries = {
"": SubResource("AnimationLibrary_ydtxy")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(150, 112)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rdnm3")
volume_db = -10.009

[node name="CanvasGroup" type="CanvasLayer" parent="."]

[node name="Super1" type="Button" parent="CanvasGroup"]
texture_filter = 1
offset_left = 80.0
offset_top = 5.0
offset_right = 151.0
offset_bottom = 36.0
text = "Super 1"

[node name="Reset" type="Button" parent="CanvasGroup"]
texture_filter = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 76.0
offset_bottom = 36.0
text = "Reset"

[connection signal="pressed" from="CanvasGroup/Super1" to="." method="_on_super_1_pressed"]
[connection signal="pressed" from="CanvasGroup/Reset" to="." method="_on_reset_pressed"]
